@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
hide empty members
title Class Diagram - UC-72 Open Conversation (Admin)

class "Chat Widget / Admin Chat UI" as UI <<boundary>>
class "ChatController" as Controller <<controller>>
class "ChatService" as Service <<service>>
class "ChatConversation" as ChatConversation <<domain>>
class "ChatMessage" as ChatMessage <<domain>>
class "ShoeDetail" as ShoeDetail <<domain>>

UI --> Controller : GET /chat/conversations/:id
Controller --> Service : delegates
Service --> ChatConversation : uses
Service --> ChatMessage : uses
Service --> ShoeDetail : uses

note right of UI
UC-72 - Open Conversation (Admin)
Actors: Admin, Manager
Pre: Conversation tồn tại
Post: Lịch sử chat hiển thị
end note
@enduml
